2021-07-30 5.0.0
  - AEM Cloud compatibility improvements (separate package for AEM cloud!)
  - Changed packages: no more bundle package, install always "complete" package (includes Groovy Console)
  - New location for install hook scripts: /conf/groovyconsole/scripts/aecu (/var/groovyconsole/scripts/aecu still supported) 

2021-06-11 4.1.0
  - New filter methods: filterByNodeExists() and filterByNodeNotExists()
  - Fixed Sonar issues (#156)

2020-12-21 4.0.0
  - Update to Groovy Console 16 and require AEM 6.5 (#135)
  - Fix for AEM Cloud in manual execution tool
  - Convert GString values in binding methods (#140)

2020-10-07 3.3.0
  - Allow to change primary type
  - Documentation and example updates
  - Fixed issue with UnsupportedOperationException (#136)

2020-06-30 3.2.0
  - Allow to limit access to AECU via group permissions. Attention: This requires configuration for non-admin users.
  - Autocomplete added, all AECU methods are listed.
  - Added parameter "newName" to doCopyResourceToRelativePath action
  - Added doJoinProperty() methods to binding

2020-04-21 3.1.1
  - JMX: added executeWithHistory()

2020-02-19 3.1.0
  - Allow node creation
  - JDK 11 support
  - Fixes issues when a page with version history is copied

2019-12-11 3.0.1
  - Fixed installation issues on new instances

2019-11-22 3.0.0
  - Update to Groovy Console 14.0.0
  - Groovy Console binding:
   - ACL testing allows to check rights of your groups

2019-10-02 2.0.1
  - Added write permissions for /home to the migration user

2019-07-24 2.0.0
  - Require Groovy Console 13
  - Requires AEM 6.4 or 6.5
  - Script base location moved from /etc/groovyconsole/scripts/aecu to /var/groovyconsole/scripts/aecu
  - No more "println" required in Groovy scripts

2019-05-03 1.10.1
  - Fixed bugs:
   - Added missing package filter entry for deploying the permissions on /var.

2019-05-02 1.10.0
  - Groovy Console binding:
   - Added filterByPropertyRegex() and filterByAnyPropertyRegex()